Add suggestion notification

--- a/src/renderer/styles/notification-comp.less
+++ b/src/renderer/styles/notification-comp.less
@@ -260,6 +260,10 @@ body {
   width: 60px;
 }
 
+.action-button.accept {
+  width: 86px;
+}
+
 .rte-container {
   height: 38px;
   position: relative;
